Odin-recipes-Lasagna-added

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -9,7 +9,7 @@
   <body>
     <a href="/index.html">Back to main page</a>
     <h1>Lasagna</h1>
-    <img src="/images/lasagna.jpg" width="500px" alt="lasagna" />
+    <img src="./images/lasagna.jpg" width="500px" alt="lasagna" />
     <h2>Description</h2>
     <p>
       Per Serving: 643 calories; protein 41.3g; carbohydrates 53.4g; fat 29.3g;
